[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync"] }
anyhow = "1.0.75"
bytes = "1.5.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"